--- a/templates/index.html
+++ b/templates/index.html
@@ -602,5 +602,13 @@
 <script src="/static/assets/mail/contact_me.js"></script>
 <!-- Core theme JS-->
 <script src="/static/js/scripts.js"></script>
+<script type="text/javascript">
+    const browseBtn = document.querySelector('.browse-btn');
+const realInput = document.querySelector('#real-input');
+
+browseBtn.addEventListener('click',()=>{
+	realInput.click();
+});
+</script>
 </body>
 </html>
