--- a/templates/service.html
+++ b/templates/service.html
@@ -156,6 +156,7 @@
                     failName += failFriends[i] + " "
                 }
                 fail_friend_text_area.value = failName
+                alert("작업을 완료하였습니다.")
             },
             error: function (err) {
                 console.log(err);
