--- a/templates/index.html
+++ b/templates/index.html
@@ -42,8 +42,8 @@
 <!-- Masthead-->
 <header class="masthead">
     <div class="container">
-        <div class="masthead-subheading">Welcome To Our Studio!</div>
-        <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
+        <div class="masthead-subheading">Welcome To Our Service!</div>
+        <div class="masthead-heading text-uppercase">카카오톡 1대1 다중 메시지</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
     </div>
 </header>
@@ -309,7 +309,7 @@
         <div class="row text-center" style="width: 100%">
 
             <div style="width: 50%; float:none; margin:0 auto">
-                <a href="service.html">서비스 시작하기</a>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="service.html">서비스 시작하기</a>
 
             </div>
         </div>
